# offline-eth-wallet

./: .gitignore  README.md  SECURITY.md  generate_wallet.py  pyproject.toml  test_generate_wallet.py
.github/workflows/: test.yml
tests/: test_generate_wallet.py
